--- a/css/New_Payroll_From.css
+++ b/css/New_Payroll_From.css
@@ -45,6 +45,7 @@ body {
 .emp-payroll {
     color: #42515f;
 }
+/* UC2*/
 .form-content {
     min-height: calc(100% - 80px);
     background-color: #f7f7f7;
@@ -103,4 +104,22 @@ label {
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
+}
+/* UC3 */
+.profile-radio-content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.profile-radio-content>label {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.profile {
+    width: 40px;
+    border-radius: 50%;
+    margin-left: 12px;
 }
