--- a/css/New_Payroll_From.css
+++ b/css/New_Payroll_From.css
@@ -145,7 +145,7 @@ select {
     font-size: 20px;
     font-family: Roboto;
     letter-spacing: 0px;
-    color: #374b5e;
+    color: #42515f;
     opacity: 1;
     background: transparent;
     border: none;
@@ -157,53 +157,67 @@ select {
   }
   
   .submitButton {
-    border: none;
-    background-color: #f5f5f5;
+    background-color: #f8f8f821;
     margin-right: 30px;
   }
   
   .cancelButton {
-   /* margin-left: 140px; */
     text-decoration: none;
     text-align: center;
   }
   
-  @media only screen and (max-width: 960px) {
-    .cancelButton {
-      margin-left: 0px;
-    }
+  .resetButton {
+    margin-right: 10px;
+}
+
+@media only screen and (max-width:600px) {
     .form {
-      width: 85%;
-      padding: 44px 20px;
-    }
-  }
-  
-  @media only screen and (max-width: 600px) {
-    .form {
-      margin-top: 10px;
-    }
-    .row {
-      flex-direction: column;
-    }
-    .uploadButton {
-      justify-content: flex-start;
-    }
-    .profile-radio-button {
-      flex-flow: wrap;
+        margin-top: 10px;
     }
     .submit-reset {
-      width: 100%;
-      display: flex;
-      flex-grow: 1;
-      flex-direction: row-reverse;
-      justify-content: space-between;
-      margin-bottom: 20px;
+        width: 100%;
+        display: flex;
+        flex-grow: 1;
+        flex-direction: row-reverse;
+        justify-content: space-between
     }
-    .submitButton {
-      margin: 0;
+    .cancelButton {
+        margin-left: 0px;
     }
-    .buttonParent {
-      flex-direction: column-reverse;
-      align-items: flex-start;
+    .form {
+        width: 85%;
+        padding: 44ox 20px;
     }
-  }
+    .profile-lable {
+        margin-left: 0px;
+    }
+}
+
+@media only screen and (max-width: 960px) {
+    .cancelButton {
+        margin-left: 0px;
+    }
+    .form {
+        width: 85%;
+        padding: 44px 20px;
+    }
+}
+
+a.button:hover {
+    background: grey;
+    color: white;
+}
+
+.submitButton:hover {
+    background-color: #82A70C;
+    color: white;
+}
+
+.resetButton:hover {
+    background: grey;
+    color: white;
+}
+
+.department {
+    margin-left: 30px;
+}
