--- a/css/New_Payroll_From.css
+++ b/css/New_Payroll_From.css
@@ -1,4 +1,3 @@
-/* UC1 */
 * {
     box-sizing: border-box;
 }
@@ -45,7 +44,7 @@ body {
 .emp-payroll {
     color: #42515f;
 }
-/* UC2*/
+
 .form-content {
     min-height: calc(100% - 80px);
     background-color: #f7f7f7;
@@ -105,7 +104,7 @@ label {
     border-radius: 4px;
     resize: vertical;
 }
-/* UC3 */
+
 .profile-radio-content {
     display: flex;
     flex-direction: row;
@@ -123,6 +122,7 @@ label {
     border-radius: 50%;
     margin-left: 12px;
 }
+
 select {
     padding: 12px;
     border: 1px solid #ccc;
@@ -157,7 +157,8 @@ select {
   }
   
   .submitButton {
-    background-color: #f8f8f821;
+    border: none;
+    border: 1px solid grey;
     margin-right: 30px;
   }
   
@@ -166,9 +167,16 @@ select {
     text-align: center;
   }
   
-  .resetButton {
-    margin-right: 10px;
-}
+    .resetButton {
+        margin-right: 10px;
+    }
+
+    error-output {
+        margin-left: 10px;
+        font-size: 15px;
+        font-style: italic;
+        color: rgb(231, 66, 66);
+    }
 
 @media only screen and (max-width:600px) {
     .form {
