--- a/css/HomePage.css
+++ b/css/HomePage.css
@@ -44,3 +44,58 @@ body {
 .emp-payroll {
     color: #42515f;
 }
+.main-content {
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - 80px);
+    background-color: #f7f7f7;
+    padding: 30px 0 10px;
+    box-sizing: border-box;
+}
+
+.header-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+    padding-bottom: 25px;
+    border: 0px solid green;
+}
+
+.emp-details-text {
+    font-family: Roboto;
+    font: normal normal bold italic 24px/25px Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    opacity: 1;
+}
+
+.emp-count {
+    background-color: #82a70c;
+    color: #ffffff;
+    border-radius: 50%;
+    font-size: 20px;
+    width: 40px;
+    text-align: center;
+    display: inline-block;
+}
+
+.add-button {
+    font-size: 19px;
+    font-family: Roboto;
+    font-weight: 400;
+    letter-spacing: 0px;
+    color: #ffffff;
+    background: #82A70C 0% 0% no-repeat padding-box;
+    border-radius: 9px;
+    opacity: 1;
+    border: 2px solid #969696;
+    padding: 7px 7px;
+    padding-top: 12px;
+    outline: none;
+    cursor: pointer;
+    text-decoration: none;
+    display: flex;
+}
